# magic-mirror-lvgl

./: .gitmodules  CMakeLists.txt  compile.sh  lv_conf.h  lv_drv_conf.h  lv_drv_conf.h.org
eez_src/src/: screens.c
src/: main.c  main.c.eez  main.c.test  main.c.workingWithoutUpdate  main.c<
